tests/specs/run/sourcemap_nonexistent_source/node_modules.out
error: Uncaught (in promise) Error: Test error from npm bundle with missing source
    at throwError ([WILDCARD]node_modules/test-pkg/bundle.js:3:9)
    at [WILDCARD]node_modules.ts:3:1
