tests/specs/run/sourcemap_nonexistent_source/node_modules.ts
import { throwError } from "test-pkg";

throwError();
